# TMRG

./: CMakeLists.txt  README.md  main.cpp
global/: console_coloring.cpp  console_coloring.h
math/: operation.cpp  operation.h
networking/server_client/: client.h  server.h
practice/: linked_list.cpp  linked_list.h  min_period.cpp  min_period.h  min_period_alt.cpp  min_period_alt.h
structures/: linked_list.cpp  linked_list.h
tasks/: min_period.cpp  min_period_alt.cpp  min_period_alt.h
