cmake_minimum_required(VERSION 3.15)
project(TMRG)

set(CMAKE_CXX_STANDARD 17)

add_executable(TMRG main.cpp practice/min_period.cpp practice/min_period.h practice/min_period_alt.cpp practice/min_period_alt.h practice/linked_list.cpp practice/linked_list.h global/console_coloring.cpp global/console_coloring.h)